# gem-hr-copilot

./: .gitignore
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_drop_feedback_table.py  c3d4e5f6a7b8_slim_orphan_models.py  f3724916c943_initial_models.py
backend/app/: main.py
backend/app/api/routers/: __init__.py  chat.py  documents.py  ingest.py  kb.py
backend/app/core/: config.py  dependencies.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  conversation.py  document.py  ingest_task.py  knowledge_base.py
backend/app/ingestion/: __init__.py  base_loader.py  chunker.py  confluence.py  embedder.py  pdf_processor.py  url_crawler.py
backend/app/models/: __init__.py  chat.py  common.py  ingest.py
backend/app/rag/: generator.py  pipeline.py  query_rewrite.py  reranker.py  retriever.py
backend/app/repositories/: __init__.py  base.py  document_repo.py  kb_repo.py  message_repo.py  session_repo.py
backend/app/services/: __init__.py  chat_service.py  ingest_service.py
backend/app/worker/: __init__.py  queue.py  tasks.py
backend/app/workflows/: hr_processes.py  workflow_json.py
backend/data/: sample_workflows.gem.json  workflows.example.json
docker/: .dockerignore  .env.example  build.sh  deploy.sh  docker-compose.yml
docker/elasticsearch/: Dockerfile
docker/nginx/: nginx.conf  proxy.conf
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  page.tsx  (+2 more)
(+75 files in other folders)
